  Added feature MR-345 - Two separate options for confirming closure of Tabs and Connection Panels
  Added feature MR-346 - Option to show/hide the description box at the bottom of the Config panel
  Fixed issue MR-354 - Re-ordering tabs doesn't give good, reliable visual feedback
  Fixed issue MR-377 - Several redundant panels can be opened
  Fixed issue MR-379 - Connection variables not working with external tools
  Fixed issue MR-381 - Notifications panel - whitespace context menu allows Copy and Delete on nothing
  The username and domain settings are now hidden for VNC connections since they are not supported.
  Changed "Automatically get session information" to be disabled by default.

1.71 Beta 1 (2013-03-04):
  Added feature MR-329 - Create Option to disable the "Quick: " prefix
  Fixed issue MR-67 - Sort does not recursively sort
  Fixed issue MR-117 - Remote Session Info Window / Tab does not populate
  Fixed issue MR-121 - Config pane not sorting properties correctly when switching between alphabetical and categorized view
  Fixed issue MR-130 - Issues duplicating folders
  Fixed issue MR-142 - Start of mRemoteNG takes about one minute and consumes excessive CPU
  Fixed issue MR-158 - Password field not accepting Pipe
  Fixed issue MR-330 - Portable version saves log to user's profile folder
  Fixed issue MR-333 - Unnecessary prompt for 'close all open connections?'
  Fixed issue MR-342 - Incorrect view in config pane of new connection after viewing default inheritance
  Fixed issue MR-352 - Passwords with " (quotation mark) and # (hash key) characters make mRemoteNG to open PuttyNG dialog
  Fixed issue MR-362 - Rename 'Screenshot Manager' to 'Screenshots' on the View menu to match Panel name
  Added detection of newer versions of connection files and database schemata. mRemoteNG will now refuse to open them to avoid data loss.
  Improved appearance and discoverability of the connection search box.